--- a/Nails.html
+++ b/Nails.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-   <img src="nails.png" alt="Nails" width="auto" height="auto">
+   <img src="nails.png" alt="Nails" width="1000px" height="1000px">
   </body>
 </html>
