--- a/Nails.html
+++ b/Nails.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-   <img src="nails.png" alt="Nails" width="1500px" height="auto">
+   <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
   </body>
 </html>
