--- a/Nails.html
+++ b/Nails.html
@@ -7,5 +7,9 @@
   </head>
   <body>
    <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
+     <tr>
+          <td><img src="na.png" alt="na" width="400px" heigth="400px"/></td>
+          <td><img src="sha.png" alt="sha" width="400px" heigth="400px"/></td>
+        </tr>
   </body>
 </html>
