--- a/Nails.html
+++ b/Nails.html
@@ -8,8 +8,8 @@
   <body>
    <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
      <tr>
-          <td><img src="na.png" alt="na" width="400px" heigth="400px"/></td>
-          <td><img src="sha.png" alt="sha" width="400px" heigth="400px"/></td>
+          <center><td><img src="na.png" alt="na" width="400px" heigth="400px"/></td></center>
+          <center><td><img src="sha.png" alt="sha" width="400px" heigth="400px"/></td></center>
         </tr>
   </body>
 </html>
