--- a/Nails.html
+++ b/Nails.html
@@ -7,9 +7,12 @@
   </head>
   <body>
    <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
-     <tr>
+    <table> <tr>
           <center><td><img src="na.png" alt="na" width="400px" heigth="400px"/></td></center>
           <center><td><img src="sha.png" alt="sha" width="400px" heigth="400px"/></td></center>
         </tr>
+    
+    </table>
+    
   </body>
 </html>
