--- a/Nails.html
+++ b/Nails.html
@@ -7,12 +7,13 @@
   </head>
   <body>
    <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
-    <table> <tr>
-          <center><td><img src="na.png" alt="na" width="400px" heigth="400px"/></td></center>
-          <center><td><img src="sha.png" alt="sha" width="400px" heigth="400px"/></td></center>
+   
+   <center><table> 
+      <tr>
+          <td><img src="na.png" alt="na" width="400px" heigth="400px"/></td>
+          <td><img src="sha.png" alt="sha" width="400px" heigth="400px"/></td>
         </tr>
-    
-    </table>
+    </table></center>
     
   </body>
 </html>
