--- a/Nails.html
+++ b/Nails.html
@@ -7,6 +7,16 @@
   </head>
   <body>
    <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
+    <h2>services offered:</h2>
+ <ul>
+   
+<li>Colors</li>
+<li>Styles/shape</li>
+<li>design</li>
+ 
+ </ul> 
+
+
    
    <center><table> 
       <tr>
