--- a/Nails.html
+++ b/Nails.html
@@ -18,12 +18,27 @@
 
 
    
-   <center><table> 
-      <tr>
-          <td><img src="na.png" alt="na" width="400px" heigth="400px"/></td>
-          <td><img src="sha.png" alt="sha" width="400px" heigth="400px"/></td>
+  <table>
+
+       <tr>
+          <th>Colors</th>
+          <th>Styles/shape</th>
+          <th>design</th>
+      </tr>
+        
+       <tr>
+          <td>Community building</td>
+          <td>Cyberbullying and online harassment</td>
+      </tr>
+
+
+        <tr>
+          <td><img src="color.png" alt="pro" width="400px" heigth="400px"/></td>
+          <td><img src="styles.png" alt="con" width="400px" heigth="400px"/></td>
+          <td><img src="sha.png" alt="con" width="400px" heigth="400px"/></td>
         </tr>
-    </table></center>
+
+<table>
     
   </body>
 </html>
