--- a/Nails.html
+++ b/Nails.html
@@ -8,17 +8,10 @@
   <body>
    <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
     <h2>services offered:</h2>
- <ul>
-   
-<li>Colors</li>
-<li>Styles/shape</li>
-<li>design</li>
- 
- </ul> 
 
 
    
-  <table>
+  <table><center>
 
        <tr>
           <th>Colors</th>
@@ -34,11 +27,11 @@
 
         <tr>
           <td><img src="color.png" alt="pro" width="400px" heigth="400px"/></td>
-          <td><img src="styles.png" alt="con" width="400px" heigth="400px"/></td>
+          <td><img src="Styles.png" alt="con" width="400px" heigth="400px"/></td>
           <td><img src="sha.png" alt="con" width="400px" heigth="400px"/></td>
         </tr>
 
-<table>
+</center><table>
     
   </body>
 </html>
