--- a/Nails.html
+++ b/Nails.html
@@ -11,7 +11,7 @@
 
 
    
-  <table><center>
+  <table class="table1">
 
        <tr>
           <th>Colors</th>
@@ -31,7 +31,7 @@
           <td><img src="sha.png" alt="con" width="400px" heigth="400px"/></td>
         </tr>
 
-</center><table>
+</table>
     
   </body>
 </html>
