--- a/Nails.html
+++ b/Nails.html
@@ -7,7 +7,7 @@
   </head>
   <body>
    <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
-    <h2>services offered:</h2>
+    <h2><center>services offered:</center></h2>
 
 
    
