--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
         <li><a href="hair.html" alt="hair">Hair</a></li>
       </ul>
     </nav>
-    <main>
-      <!-- Main content sections go here -->
-    </main>
-    <footer>
-      <!-- Footer content -->
-    </footer>
+
+<section id="contact">
+  <h2>📞 Contact Us</h2>
+  <p>Want to book an appointment or ask us something? Slide into our inbox!</p>
+  
+  <form action="#" method="POST" style="max-width: 500px; margin-top: 20px;">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
+
+    <label for="message">Message:</label><br>
+    <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 10px; margin: 8px 0;"></textarea><br>
+
+    <button type="submit" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer;">
+      Send
+    </button>
+  </form>
+</section>
+
+    
   </body>
 </html>
