--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
 
 <section id="contact">
-  <h2>📞 Contact Us</h2>
+  <h2>Contact Us</h2>
   <p>Want to book an appointment or ask us something? Slide into our inbox!</p>
   
   <form action="#" method="POST" style="max-width: 500px; margin-top: 20px;">
