--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <header>
-      <h1><center>Beauty bar</center></h1>
+     <img src="logo.png" alt="Beauty Bar Logo" style="height: 60px; vertical-align: middle;">
+  <h1 style="display: inline-block; margin-left: 10px;">Beauty Bar </h1>
     </header>
     <nav>
       <ul>
