--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
   <h1 style="display: inline-block; margin-left: 10px;">Beauty Bar </h1>
     </header>
     <nav>
-      <ul>
-        <li><a href="Nails.html" alt="Nails">Nails</a></li>
-        <li><a href="makeup.html" alt="makeup">Make up</a></li>
-        <li><a href="hair.html" alt="hair">Hair</a></li>
-      </ul>
+      <section>
+    <h2>Welcome to Beauty Bar</h2>
+    <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
+
+    <div class="service-links">
+      <a href="nails.html">💅 Nails</a>
+      <a href="makeup.html">💄 Make Up</a>
+      <a href="hair.html">💇‍♀️ Hair</a>
+    </div>
+  </section>
     </nav>
 
 <section id="contact">
