--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
 
     <div class="service-links">
-      <a href="nails.html">💅 Nails</a>
+      <a href="Nails.html">💅 Nails</a>
       <a href="makeup.html">💄 Make Up</a>
       <a href="hair.html">💇‍♀️ Hair</a>
     </div>
