--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 style="display: inline-block; margin-left: 10px;">Beauty Bar </h1>
     </header>
     <nav>
-      <section>
+      <section id="section1">
     <h2>Welcome to Beauty Bar</h2>
     <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
 
