--- a/Nails.html
+++ b/Nails.html
@@ -5,27 +5,26 @@
     <title>Nails</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-   <center><img src="nails.png" alt="Nails" width="1500px" height="auto"></center>
-    <h2><center>services offered:</center></h2>
+<body id="body2">
 
+  <img src="nails.png" alt="Nails" class="main-image">
 
-   
-  <table class="table1">
+  <h2>Services Offered:</h2>
 
-       <tr>
-          <th>Colors</th>
-          <th>Styles/shape</th>
-          <th>design</th>
-      </tr>
+  <div class="service-options">
+    <div>
+      <h3>Colors</h3>
+      <img src="color.png" alt="Nail Colors" />
+    </div>
+    <div>
+      <h3>Styles/Shape</h3>
+      <img src="Styles.png" alt="Nail Styles" />
+    </div>
+    <div>
+      <h3>Design</h3>
+      <img src="sha.png" alt="Nail Designs" />
+    </div>
+  </div>
 
-        <tr>
-          <td><img src="color.png" alt="pro" width="400px" heigth="400px"/></td>
-          <td><img src="Styles.png" alt="con" width="400px" heigth="400px"/></td>
-          <td><img src="sha.png" alt="con" width="400px" heigth="400px"/></td>
-        </tr>
-
-</table>
-    
-  </body>
+</body>
 </html>
