--- a/Nails.html
+++ b/Nails.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <a href="index.html"style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer;>Go to Home</a>
+  <a href="index.html">Go to Home style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer;</a>
 
 </body>
 </html>
