--- a/Nails.html
+++ b/Nails.html
@@ -26,7 +26,11 @@
     </div>
   </div>
 
-  <a href="index.html">Go to Home style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer;</a>
+  <a href="makeup.html" style="text-decoration: none;">
+  <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
+    Go to Make Up Page
+  </button>
+</a>
 
 </body>
 </html>
