--- a/Nails.html
+++ b/Nails.html
@@ -27,9 +27,9 @@
   </div>
 
   <a href="makeup.html" style="text-decoration: none;">
-  <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
+ <center> <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
     Go to Make Up Page
-  </button>
+  </button></center>
 </a>
 
 </body>
