--- a/Nails.html
+++ b/Nails.html
@@ -28,7 +28,7 @@
 
   <a href="makeup.html" style="text-decoration: none;">
  <center> <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
-    Go to Make Up Page
+    HOME
   </button></center>
 </a>
 
