--- a/Nails.html
+++ b/Nails.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <a href="makeup.html" style="text-decoration: none;">
+  <a href="index.html" style="text-decoration: none;">
  <center> <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
     HOME
   </button></center>
