--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-     <img src="logo.png" alt="Beauty Bar Logo" style="height: 60px; vertical-align: middle;">
+     <img src="logo.png" alt="Beauty Bar Logo" style="height: 60px; ">
   <h1 style="display: inline-block; margin-left: 10px;">Beauty Bar </h1>
     </header>
     <nav>
