--- a/makeup.html
+++ b/makeup.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Nails</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+<body id="body2">
 
+  <img src="make.png" alt="Nails" class="main-image">
+
+  <h2>Services Offered:</h2>
+
+  <div class="service-options">
+    <div>
+      <h3>Soft Glam</h3>
+      <img src="soft-glam.png" alt="soft glam" />
+    </div>
+    <div>
+      <h3>Night</h3>
+      <img src="Night.png" alt="night" />
+    </div>
+    <div>
+      <h3>Combo with lash extensions</h3>
+      <img src="lash.png" alt="lash" />
+    </div>
+  </div>
+
+  <a href="index.html" style="text-decoration: none;">
+ <center> <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
+    HOME
+  </button></center>
+</a>
+
+</body>
+</html>
