--- a/hair.html
+++ b/hair.html
@@ -2,27 +2,27 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Nails</title>
+    <title>Hair</title>
     <link rel="stylesheet" href="style.css">
   </head>
 <body id="body2">
 
-  <img src="nails.png" alt="Nails" class="main-image">
+  <img src="Hcolor.png" alt="Nails" class="main-image">
 
   <h2>Services Offered:</h2>
 
   <div class="service-options">
     <div>
-      <h3>Colors</h3>
-      <img src="color.png" alt="Nail Colors" />
+      <h3>Hair extensions</h3>
+      <img src="extensions.png" alt="Nail Colors" />
     </div>
     <div>
-      <h3>Styles/Shape</h3>
-      <img src="Styles.png" alt="Nail Styles" />
+      <h3>Braids</h3>
+      <img src="braid.png" alt="Nail Styles" />
     </div>
     <div>
-      <h3>Design</h3>
-      <img src="sha.png" alt="Nail Designs" />
+      <h3>Color and styles</h3>
+      <img src="hair.png" alt="Nail Designs" />
     </div>
   </div>
 
