--- a/hair.html
+++ b/hair.html
@@ -7,7 +7,7 @@
   </head>
 <body id="body2">
 
-  <img src="Hcolor.png" alt="Nails" class="main-image">
+  <img src="hair.png" alt="Nails" class="main-image">
 
   <h2>Services Offered:</h2>
 
@@ -22,7 +22,7 @@
     </div>
     <div>
       <h3>Color and styles</h3>
-      <img src="hair.png" alt="Nail Designs" />
+      <img src="Hcolor.png" alt="Nail Designs" />
     </div>
   </div>
 
