--- a/makeup.html
+++ b/makeup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Nails</title>
+    <title>Nails up</title>
     <link rel="stylesheet" href="style.css">
   </head>
 <body id="body2">
