--- a/index.html
+++ b/index.html
@@ -15,13 +15,26 @@
     <h2>Welcome to Beauty Bar</h2>
     <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
 
-    <div class="service-links">
-      <a href="Nails.html">Nails</a>
-      <a href="makeup.html">Make Up</a>
-      <a href="hair.html">Hair</a>
-    </div>
-  </section>
-    </nav>
+     <table style="margin: 0 auto; margin-top: 30px;">
+    <tr>
+      <td style="padding: 15px;">
+        <a href="Nails.html" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; border-radius: 8px; text-decoration: none; font-size: 1.1rem;">
+          Nails
+        </a>
+      </td>
+      <td style="padding: 15px;">
+        <a href="makeup.html" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; border-radius: 8px; text-decoration: none; font-size: 1.1rem;">
+          Make Up
+        </a>
+      </td>
+      <td style="padding: 15px;">
+        <a href="hair.html" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; border-radius: 8px; text-decoration: none; font-size: 1.1rem;">
+          Hair
+        </a>
+      </td>
+    </tr>
+  </table>
+</section>
 
 <section id="contact">
   <h2>Contact Us</h2>
