--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-     <img src="logo.png" alt="Beauty Bar Logo" style="height: 200px; ">
-  <h1>Beauty Bar </h1>
-    </header>
-    <nav>
+  <header style="background: linear-gradient(to right, #ffc0cb, #ffe4e1); padding: 40px 20px; text-align: center;">
+    <img src="logo.png" alt="Beauty Bar Logo" style="height: 120px; display: block; margin: 0 auto;">
+    <h1 style="font-size: 3rem; margin: 10px 0 0; color: #d6336c; font-family: 'Georgia', serif;">Beauty Bar</h1>
+    <p style="color: #555; font-size: 1.2rem;">Glow up starts here ✨</p>
+  </header>
+
+  <nav style="background-color: #fff0f5; padding: 15px 0; display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
+    <a href="index.html" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Home</a>
+    <a href="Nails.html" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Nails</a>
+    <a href="makeup.html" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Make Up</a>
+    <a href="hair.html" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Hair</a>
+    <a href="#contact" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Contact</a>
+  </nav>
       <section id="section1">
     <h2>Welcome to Beauty Bar</h2>
     <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
