--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header style="background: linear-gradient(to right, #ffc0cb, #ffe4e1); padding: 40px 20px; text-align: center;">
     <img src="logo.png" alt="Beauty Bar Logo" style="height: 120px; display: block; margin: 0 auto;">
     <h1 style="font-size: 3rem; margin: 10px 0 0; color: #d6336c; font-family: 'Georgia', serif;">Beauty Bar</h1>
-    <p style="color: #555; font-size: 1.2rem;">Glow up starts here ✨</p>
+    <p style="color: #555; font-size: 1.2rem;">Glow up starts here</p>
   </header>
 
   <nav style="background-color: #fff0f5; padding: 15px 0; display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
@@ -17,32 +17,31 @@
     <a href="Nails.html" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Nails</a>
     <a href="makeup.html" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Make Up</a>
     <a href="hair.html" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Hair</a>
-    <a href="#contact" style="text-decoration: none; color: #d6336c; font-weight: bold; font-size: 1.1rem;">Contact</a>
+    
   </nav>
       <section id="section1">
     <h2>Welcome to Beauty Bar</h2>
     <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
 
-     <table style="margin: 0 auto; margin-top: 30px;">
-    <tr>
-      <td style="padding: 15px;">
-        <a href="Nails.html" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; border-radius: 8px; text-decoration: none; font-size: 1.1rem;">
-          Nails
-        </a>
-      </td>
-      <td style="padding: 15px;">
-        <a href="makeup.html" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; border-radius: 8px; text-decoration: none; font-size: 1.1rem;">
-          Make Up
-        </a>
-      </td>
-      <td style="padding: 15px;">
-        <a href="hair.html" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; border-radius: 8px; text-decoration: none; font-size: 1.1rem;">
-          Hair
-        </a>
-      </td>
-    </tr>
-  </table>
-</section>
+      <section id="contact">
+    <h2>Contactanos</h2>
+    <p>¿Querés reservar un turno o tenés alguna pregunta? ¡Escribinos!</p>
+    
+    <form action="#" method="POST" style="max-width: 500px; margin-top: 20px;">
+      <label for="name">Nombre:</label><br>
+      <input type="text" id="name" name="name" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
+
+      <label for="email">Email:</label><br>
+      <input type="email" id="email" name="email" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
+
+      <label for="message">Mensaje:</label><br>
+      <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 10px; margin: 8px 0;"></textarea><br>
+
+      <button type="submit" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer;">
+        Enviar
+      </button>
+    </form>
+  </section>
 
 <section id="contact">
   <h2>Contact Us</h2>
