--- a/index.html
+++ b/index.html
@@ -23,27 +23,7 @@
     <h2>Welcome to Beauty Bar</h2>
     <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
 
-      <section id="contact">
-    <h2>Contactanos</h2>
-    <p>¿Querés reservar un turno o tenés alguna pregunta? ¡Escribinos!</p>
-    
-    <form action="#" method="POST" style="max-width: 500px; margin-top: 20px;">
-      <label for="name">Nombre:</label><br>
-      <input type="text" id="name" name="name" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
-
-      <label for="email">Email:</label><br>
-      <input type="email" id="email" name="email" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
-
-      <label for="message">Mensaje:</label><br>
-      <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 10px; margin: 8px 0;"></textarea><br>
-
-      <button type="submit" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer;">
-        Enviar
-      </button>
-    </form>
-  </section>
-
-<section id="contact">
+<section id="contact" style= center;>
   <h2>Contact Us</h2>
   <p>Want to book an appointment or ask us something? Slide into our inbox!</p>
   
