--- a/Nails.html
+++ b/Nails.html
@@ -11,7 +11,7 @@
 
   <h2>Services Offered:</h2>
 
-  <div class="service-options">
+  <div id="service-options">
     <div>
       <h3>Colors</h3>
       <img src="color.png" alt="Nail Colors" />
