--- a/hair.html
+++ b/hair.html
@@ -11,7 +11,7 @@
 
   <h2>Services Offered:</h2>
 
-  <div class="service-options">
+  <div id="service-options">
     <div>
       <h3>Hair extensions</h3>
       <img src="extensions.png" alt="Nail Colors" />
