--- a/makeup.html
+++ b/makeup.html
@@ -11,7 +11,7 @@
 
   <h2>Services Offered:</h2>
 
-  <div class="service-options">
+  <div id="service-options">
     <div>
       <h3>Soft Glam</h3>
       <img src="soft-glam.png" alt="soft glam" />
