--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Welcome to Beauty Bar</h2>
     <p>At Beauty Bar, we offer top-notch services to pamper you from head to toe. Click on any of the services above to learn more!</p>
 
-<section id="contact" style= center;>
+<section id="contact">
   <h2>Contact Us</h2>
   <p>Want to book an appointment or ask us something? Slide into our inbox!</p>
   
