--- a/Nails.html
+++ b/Nails.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body id="body2">
-
+<div class="toppic">
   <img src="nails.png" alt="Nails" class="main-image">
-
+</div>
   <h2>Services Offered:</h2>
 
   <div id="service-options">
