--- a/Nails.html
+++ b/Nails.html
@@ -7,7 +7,7 @@
   </head>
 <body id="body2">
 <div class="toppic">
-  <img src="nails.png" alt="Nails" class="main-image">
+  <img src="nails.png" alt="Nails">
 </div>
   <h2>Services Offered:</h2>
 
