--- a/Nails.html
+++ b/Nails.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body id="body2">
-<div class="toppic">
-  <img src="nails.png" alt="Nails" class="main-image">
-</div>
-  <h2>Services Offered:</h2>
+<header style="background: linear-gradient(to right, #ffc0cb, #ffe4e1); padding: 40px 20px; text-align: center;">
+    <img src="nails.png" alt="Beauty Bar Logo" style="height: 120px; display: block; margin: 0 auto;">
+    <p style="color: #555; font-size: 1.2rem;">services Offered:</p>
+  </header>
 
   <div class="service-options">
     
