--- a/makeup.html
+++ b/makeup.html
@@ -7,9 +7,11 @@
   </head>
 <body id="body2">
 
-  <img src="make.png" alt="Nails" class="main-image">
+<header style="background: linear-gradient(to right, #ffc0cb, #ffe4e1); padding: 40px 20px; text-align: center;">
+    <img src="make.png" alt="Beauty Bar Logo" style="height: 120px; display: block; margin: 0 auto;">
+    <p style="color: #555; font-size: 1.2rem;">services Offered:</p>
+  </header>
 
-  <h2>Services Offered:</h2>
 
   <div id="service-options">
     <div>
