--- a/Nails.html
+++ b/Nails.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Nails</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nails.css">
   </head>
 <body id="body2">
 <header style="background: linear-gradient(to right, #ffc0cb, #ffe4e1); padding: 40px 20px; text-align: center;">
