--- a/Nails.html
+++ b/Nails.html
@@ -11,20 +11,24 @@
     <p style="color: #555; font-size: 1.2rem;">services Offered:</p>
   </header>
 
-  <div class="service-options">
-    
-      <h3>Colors</h3>
-      <img src="color.png" alt="Nail Colors" />
-    </div>
-    <div>
-      <h3>Styles/Shape</h3>
-      <img src="Styles.png" alt="Nail Styles" />
-    </div>
-    <div>
-      <h3>Design</h3>
-      <img src="sha.png" alt="Nail Designs" />
-
-  </div>
+  <div>
+  <table class="service-table">
+    <tr>
+      <td>
+        <h3>Colors</h3>
+        <img src="color.png" alt="Nail Colors">
+      </td>
+      <td>
+        <h3>Styles/Shape</h3>
+        <img src="Styles.png" alt="Nail Styles">
+      </td>
+      <td>
+        <h3>Design</h3>
+        <img src="sha.png" alt="Nail Designs">
+      </td>
+    </tr>
+  </table>
+</div>
 
   <a href="index.html" style="text-decoration: none;">
  <center> <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
