--- a/hair.html
+++ b/hair.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Hair</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nails.css">
   </head>
 <body id="body2">
 
@@ -12,21 +12,25 @@
     <p style="color: #555; font-size: 1.2rem;">services Offered:</p>
   </header>
 
+<div>
+  <table class="service-table">
+    <tr>
+      <td>
+        <h3>Hair Extension</h3>
+        <img src="extension.png" alt="Nail Colors">
+      </td>
+      <td>
+        <h3>Braids</h3>
+        <img src="braid.png" alt="Nail Styles">
+      </td>
+      <td>
+        <h3>Color And Styles</h3>
+        <img src="Hcolor.png" alt="Nail Designs">
+      </td>
+    </tr>
+  </table>
+</div>
 
-  <div id="service-options">
-    <div>
-      <h3>Hair extensions</h3>
-      <img src="extensions.png" alt="Nail Colors" />
-    </div>
-    <div>
-      <h3>Braids</h3>
-      <img src="braid.png" alt="Nail Styles" />
-    </div>
-    <div>
-      <h3>Color and styles</h3>
-      <img src="Hcolor.png" alt="Nail Designs" />
-    </div>
-  </div>
 
   <a href="index.html" style="text-decoration: none;">
  <center> <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
