--- a/makeup.html
+++ b/makeup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Nails up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nails.css">
   </head>
 <body id="body2">
 
@@ -27,6 +27,25 @@
       <img src="lash.png" alt="lash" />
     </div>
   </div>
+
+<div>
+  <table class="service-table">
+    <tr>
+      <td>
+        <h3>Soft Glam</h3>
+        <img src="soft-glam.png" alt="soft glam">
+      </td>
+      <td>
+        <h3>Night</h3>
+        <img src="Night.png" alt="Night">
+      </td>
+      <td>
+        <h3>Combo With Lash Extension</h3>
+        <img src="lash.png" alt="lash">
+      </td>
+    </tr>
+  </table>
+</div>
 
   <a href="index.html" style="text-decoration: none;">
  <center> <button style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer; border-radius: 5px; font-size: 16px;">
