--- a/hair.html
+++ b/hair.html
@@ -17,15 +17,15 @@
     <tr>
       <td>
         <h3>Hair Extension</h3>
-        <img src="extensions.png" alt="Nail Colors">
+        <img src="extensions.pngg" alt="extensions">
       </td>
       <td>
         <h3>Braids</h3>
-        <img src="braid.png" alt="Nail Styles">
+        <img src="braid.png" alt="braids">
       </td>
       <td>
         <h3>Color And Styles</h3>
-        <img src="Hcolor.png" alt="Nail Designs">
+        <img src="Hcolor.png" alt="color">
       </td>
     </tr>
   </table>
