--- a/hair.html
+++ b/hair.html
@@ -17,7 +17,7 @@
     <tr>
       <td>
         <h3>Hair Extension</h3>
-        <img src="extensions.pngg" alt="extensions">
+        <img src="extensions.png" alt="extensions">
       </td>
       <td>
         <h3>Braids</h3>
