--- a/index.html
+++ b/index.html
@@ -23,23 +23,21 @@
     <h2>Welcome to Beauty Bar</h2>
     <p>At Beauty Bar, we offer top-quality services to pamper you from head to toe. Click on any of the services above to learn more!!</p>
 
-<section id="contact">
+<section id="contact" class="center-form">
   <h2>Contact Us</h2>
-  <p>Want to book an appointment or ask us something? Slide into our inbox!</p>
+  <p>For appointment or ask us something? Slide into our inbox!</p>
   
-  <form action="#" method="POST" style="max-width: 500px; margin-top: 20px;">
+  <form action="#" method="POST">
     <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
+    <input type="text" id="name" name="name" required><br>
 
     <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required style="width: 100%; padding: 10px; margin: 8px 0;"><br>
+    <input type="email" id="email" name="email" required><br>
 
     <label for="message">Message:</label><br>
-    <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 10px; margin: 8px 0;"></textarea><br>
+    <textarea id="message" name="message" rows="5" required></textarea><br>
 
-    <button type="submit" style="padding: 10px 20px; background-color: #d6336c; color: white; border: none; cursor: pointer;">
-      Send
-    </button>
+    <button type="submit">Send</button>
   </form>
 </section>
 
