--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </nav>
       <section id="section1">
     <h2>Welcome to Beauty Bar</h2>
+         <img src="foto.png" alt="foto">
     <p>At Beauty Bar, we offer top-quality services to pamper you from head to toe. Click on any of the services above to learn more!!</p>
 
 <section id="contact" class="center-form">
