--- a/Nails.html
+++ b/Nails.html
@@ -17,6 +17,7 @@
       <td>
         <h3>Colors</h3>
         <img src="color.png" alt="Nail Colors">
+        <p>hola</p>
       </td>
       <td>
         <h3>Styles/Shape</h3>
