--- a/Nails.html
+++ b/Nails.html
@@ -17,7 +17,7 @@
       <td>
         <h3>Colors</h3>
         <img src="color.png" alt="Nail Colors">
-        <p>hola</p>
+        <p>We offer a wide variety of colors for your nails</p>
       </td>
       <td>
         <h3>Styles/Shape</h3>
