--- a/hair.html
+++ b/hair.html
@@ -9,7 +9,7 @@
 
   <header style="background: linear-gradient(to right, #ffc0cb, #ffe4e1); padding: 40px 20px; text-align: center;">
     <img src="hair.png" alt="Beauty Bar Logo" style="height: 120px; display: block; margin: 0 auto;">
-    <p style="color: #555; font-size: 1.2rem;">services Offered:</p>
+    <p style="color: #555; font-size: 1.2rem;">Services Offered:</p>
   </header>
 
 <div>
